--- a/src/components/_RandomPage.scss
+++ b/src/components/_RandomPage.scss
@@ -155,15 +155,21 @@
 
         .header {
           width: 100%;
-          height: 9%;
+          height: 10%;
           background-color: rgb(255, 51, 0);
           border: 1px solid rgb(255, 51, 0);
           border-radius: 75px 75px 0 0;
           @include flexBox(row, center, center);
 
           p {
+            text-align: center;
             font-weight: 600;
             font-size: 1.4em;
+
+            span {
+              text-transform: uppercase;
+              font-weight: 1000;
+            }
           }
         }
 
@@ -222,7 +228,13 @@
     @include flexBox(row, center, center);
 
     .congratulation {
+      background-color: rgba($color: #000000, $alpha: 0.7);
+      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+      font-style: italic;
+      border: 3px solid #08b908;
+      border-radius: 30px;
       @include flexBox(column, center, center);
+      padding: 50px 30px !important;
       p {
         color: #08b908;
         font-size: 1.6em;
